Add category sorting in Shop and improve UI

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -42,7 +42,7 @@ $footer-hover-color: underline;
   line-height: 1.5;
 }
 
-.social-icons a {
+.social-links a {
   display: block;
   color: $footer-text-color;
   text-decoration: none;
