--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -99,7 +99,7 @@ $recommended-product-bg: #fff;
 }
 
 .view-product-link:hover {
-  background-color: #45a049;
+  background-color: #8a4ea6;
 }
 
 @media (max-width: 768px) {
