--- a/src/styles/_shop.scss
+++ b/src/styles/_shop.scss
@@ -81,7 +81,7 @@ $shop-product-hover-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .product button:hover {
-  background-color: #45a049;
+  background-color: #8a4ea6;
 }
 
 .category-link {
